syntax = "proto3";

package raw_product;

service RawProductService {
  rpc GetRawProducts(GetRawProductsRequest) returns (GetRawProductsResponse);
  rpc BatchCreateProducts (BatchCreateProductsRequest) returns (BatchCreateProductsResponse);
}

message GetRawProductsRequest {
  string query = 1;
  string category = 2; // 'videocards', 'processors', 'motherboards'
  string platform_id = 3; // ID платформы (например, '101858153' для Nintendo)
}

message RawProduct {
  string id = 1;
  string name = 2;
  int32 price = 3;
  string image_url = 4;
  string product_url = 5;
  string category = 6;
  string source = 7; // 'ozon', 'wb', ...
  string query = 8; // Запрос, по которому найден товар
}

message GetRawProductsResponse {
  repeated RawProduct products = 1;
  int32 total_count = 2;
  string source = 3;
}

message BatchCreateProductsRequest {
  repeated RawProduct products = 1;
}

message BatchCreateProductsResponse {
  int32 inserted = 1;
} 